Initial Test Run

--- a/market/css/bootstrap-reset.css
+++ b/market/css/bootstrap-reset.css
@@ -1,9 +1,6 @@
-/*anchor*/
-
 a:hover {
     color: #2A3542;
 }
-/*panel*/
 .panel {
     border: none;
     box-shadow: none;
@@ -23,9 +20,6 @@ a:hover {
     margin-top: 0;
     font-family: 'Open Sans', sans-serif;
 }
-
-/*label*/
-
 .label {
     padding: 0.5em 0.8em;
 }
@@ -57,9 +51,6 @@ a:hover {
 .label-inverse {
     background-color: #344860;
 }
-
-/*text color*/
-
 .text-danger {
     color: #FF6C60;
 }
@@ -83,9 +74,6 @@ a:hover {
 .text-info {
     color: #8175c7;
 }
-
-/*modal*/
-
 .modal-content {
     box-shadow: none;
     border: none;
@@ -102,9 +90,6 @@ a:hover {
 .modal-header .close {
     margin-top: 0;
 }
-
-/*text input*/
-
 .form-control {
     border: 1px solid #e2e2e4;
     box-shadow: none;
@@ -127,13 +112,11 @@ input, textarea, select, button {
     outline: none !important;
 }
 
-/*list*/
 
 ul {
     padding-left: 0;
 }
 
-/*button*/
 
 .btn-default {
     background-color: #64de68;
@@ -147,8 +130,8 @@ ul {
 }
 
 .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
-    background-color: #b0b5b9;
-    border-color: #b0b5b9;
+    background-color: #1ebd65;
+    border-color: #1ebd65;
     color: #fff;
 }
 
@@ -217,14 +200,12 @@ ul {
     box-shadow: none !important;
 }
 
-/*Rounded Button*/
 
 .btn-round {
     border-radius: 30px;
     -webkit-border-radius: 30px;
 }
 
-/*shadow button*/
 
 .btn-shadow.btn-default {
     box-shadow: 0 4px #9c9c9c;
@@ -246,20 +227,15 @@ ul {
 }
 
 
-/*dropdown shadow*/
-
 .btn-group.open .dropdown-toggle, .btn-white.active, .btn:active, .btn.active {
     box-shadow: none;
 }
 
-/*dropdown select bg*/
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
     background-color: #4485d0;
     color: #FFFFFF;
     text-decoration: none;
 }
-
-/*split dropdown btn*/
 
 .btn-white {
     background-clip: padding-box;
@@ -268,28 +244,19 @@ ul {
     box-shadow: 0 -1px 1px rgba(0, 0, 0, 0.05) inset;
 }
 
-/*breadcrumbs*/
-
 .breadcrumb {
     background-color: #fff;
 }
 
-
-/*tab*/
-
 .nav-tabs > li > a {
     margin-right: 1px;
 }
-
-/*collapse*/
 
 .panel-default > .panel-heading {
     background-color: #FFFFFF;
     border-color: #DDDDDD;
     color: #797979;
 }
-
-/*nav inverse*/
 
 .navbar-inverse {
     background-color: #7087A3;
@@ -329,8 +296,6 @@ ul {
     color: #fff;
 }
 
-/*nav justified*/
-
 .nav-justified {
     width: auto !important;
 }
@@ -340,7 +305,6 @@ ul {
     -webkit-border-radius: 0 4px 0 0 !important;
 }
 
-/*list group*/
 
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
     background-color: #00A8B3;
@@ -353,20 +317,16 @@ ul {
     font-weight: 300;
 }
 
-/*progress*/
 
 .progress {
     box-shadow: none;
     background: #f0f2f7;
 }
 
-/*alert*/
 
 .alert-success, .alert-danger, .alert-info, .alert-warning {
     border: none;
 }
-
-/*table*/
 
 .table thead > tr > th, .table tbody > tr > th, .table tfoot > tr > th, .table thead > tr > td, .table tbody > tr > td, .table tfoot > tr > td {
     padding: 10px;
