--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,29 @@
 	}
 }
 
+.myButton {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #33bdef), color-stop(1, #019ad2));
+  background: -moz-linear-gradient(top, #33bdef 5%, #019ad2 100%);
+  background: -webkit-linear-gradient(top, #33bdef 5%, #019ad2 100%);
+  background: -o-linear-gradient(top, #33bdef 5%, #019ad2 100%);
+  background: -ms-linear-gradient(top, #33bdef 5%, #019ad2 100%);
+  background: linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#33bdef', endColorstr='#019ad2', GradientType=0);
+  background-color: #0275d8;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  border: 1px solid #057fd0;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+}
+
 .container {
     position: absolute;
     top: 50vh;
@@ -77,7 +100,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #7b7b7b;
+    color: #fff;
     text-decoration: none;
     outline: 0;
 }
@@ -111,8 +134,7 @@ a:after {
 	background-position: center center;
 	min-height: 100vh;
 	width: 100vw;
-	opacity: 0.85;
-	
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
