--- a/market/css/bootstrap-reset.css
+++ b/market/css/bootstrap-reset.css
@@ -3,7 +3,7 @@ a:hover {
 }
 .panel {
     border: none;
-    box-shadow: none;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .panel-heading {
