--- a/market/css/style.css
+++ b/market/css/style.css
@@ -174,6 +174,7 @@ a, a:hover, a:focus {
     left: 0;
     right: 0;
     z-index: 1002;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .white-bg {
