--- a/market/css/bootstrap-reset.css
+++ b/market/css/bootstrap-reset.css
@@ -160,8 +160,8 @@ ul {
 }
 
 .btn-info {
-    background-color: #58c9f3;
-    border-color: #58c9f3;
+    background-color: #2a84f8;
+    border-color: #2a84f8;
     color: #FFFFFF;
 }
 
