Set fonts to css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
+
 
 @media (max-width: 500px){
 	#headerwrap h1 {
@@ -23,7 +25,7 @@
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   border-radius: 7px;
-  border: 1px solid #057fd0;
+  border: 1px solid black;
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
@@ -36,7 +38,7 @@
 
 .container {
     position: absolute;
-    top: 50vh;
+    top: 46vh;
     left: 50vw;
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
@@ -59,9 +61,9 @@ span {
 
 body {
   background-color: #f2f2f2;
-    font-family: monospace;
+    font-family: 'Ubuntu Mono', monospace;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 18px;
     color: #555;
 
     -webkit-font-smoothing: antialiased;
@@ -216,9 +218,9 @@ a:after {
 	margin-left: 20px;
 	color: #808080;
 	display: block;
-	font-size: 12px;
+	font-size: 14px;
 	font-weight: 700;
-	line-height: 40px;
+	line-height: 34px;
 	letter-spacing: 0.1em;
 	text-transform: uppercase;
 }
